pkg/antlr/.antlr/NeuroScriptParser.java
// Generated from /home/aprice/dev/neuroscript/pkg/antlr/NeuroScript.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NeuroScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_ESCAPE_GLOBAL=1, KW_ACOS=2, KW_AND=3, KW_AS=4, KW_ASIN=5, KW_ASK=6, 
		KW_ATAN=7, KW_BREAK=8, KW_CALL=9, KW_CLEAR=10, KW_CLEAR_ERROR=11, KW_COMMAND=12, 
		KW_CONTINUE=13, KW_COS=14, KW_DO=15, KW_EACH=16, KW_ELSE=17, KW_EMIT=18, 
		KW_ENDCOMMAND=19, KW_ENDFOR=20, KW_ENDFUNC=21, KW_ENDIF=22, KW_ENDON=23, 
		KW_ENDWHILE=24, KW_ERROR=25, KW_EVAL=26, KW_EVENT=27, KW_FAIL=28, KW_FALSE=29, 
		KW_FOR=30, KW_FUNC=31, KW_FUZZY=32, KW_IF=33, KW_IN=34, KW_INTO=35, KW_LAST=36, 
		KW_LEN=37, KW_LN=38, KW_LOG=39, KW_MEANS=40, KW_MUST=41, KW_MUSTBE=42, 
		KW_NAMED=43, KW_NEEDS=44, KW_NIL=45, KW_NO=46, KW_NOT=47, KW_ON=48, KW_OPTIONAL=49, 
		KW_OR=50, KW_PROMPTUSER=51, KW_RETURN=52, KW_RETURNS=53, KW_SET=54, KW_SIN=55, 
		KW_SOME=56, KW_TAN=57, KW_TIMEDATE=58, KW_TOOL=59, KW_TRUE=60, KW_TYPEOF=61, 
		KW_WHILE=62, KW_WHISPER=63, KW_WITH=64, AT=65, STRING_LIT=66, TRIPLE_BACKTICK_STRING=67, 
		TRIPLE_SQ_STRING=68, DOUBLE_BRACKET_STRING=69, METADATA_LINE=70, NUMBER_LIT=71, 
		IDENTIFIER=72, ASSIGN=73, PLUS=74, MINUS=75, STAR=76, SLASH=77, PERCENT=78, 
		STAR_STAR=79, AMPERSAND=80, PIPE=81, CARET=82, TILDE=83, LPAREN=84, RPAREN=85, 
		COMMA=86, LBRACK=87, RBRACK=88, LBRACE=89, RBRACE=90, COLON=91, DOT=92, 
		PLACEHOLDER_START=93, EQ=94, NEQ=95, GT=96, LT=97, GTE=98, LTE=99, LINE_COMMENT=100, 
		NEWLINE=101, WS=102;
	public static final int
		RULE_program = 0, RULE_file_header = 1, RULE_library_script = 2, RULE_command_script = 3, 
		RULE_library_block = 4, RULE_command_block = 5, RULE_command_statement_list = 6, 
		RULE_command_body_line = 7, RULE_command_statement = 8, RULE_on_error_only_stmt = 9, 
		RULE_simple_command_statement = 10, RULE_procedure_definition = 11, RULE_signature_part = 12, 
		RULE_needs_clause = 13, RULE_optional_clause = 14, RULE_returns_clause = 15, 
		RULE_param_list = 16, RULE_metadata_block = 17, RULE_non_empty_statement_list = 18, 
		RULE_statement_list = 19, RULE_body_line = 20, RULE_statement = 21, RULE_simple_statement = 22, 
		RULE_block_statement = 23, RULE_on_stmt = 24, RULE_error_handler = 25, 
		RULE_event_handler = 26, RULE_clearEventStmt = 27, RULE_lvalue = 28, RULE_lvalue_list = 29, 
		RULE_set_statement = 30, RULE_call_statement = 31, RULE_return_statement = 32, 
		RULE_emit_statement = 33, RULE_whisper_stmt = 34, RULE_must_statement = 35, 
		RULE_fail_statement = 36, RULE_clearErrorStmt = 37, RULE_ask_stmt = 38, 
		RULE_promptuser_stmt = 39, RULE_break_statement = 40, RULE_continue_statement = 41, 
		RULE_if_statement = 42, RULE_while_statement = 43, RULE_for_each_statement = 44, 
		RULE_qualified_identifier = 45, RULE_call_target = 46, RULE_expression = 47, 
		RULE_logical_or_expr = 48, RULE_logical_and_expr = 49, RULE_bitwise_or_expr = 50, 
		RULE_bitwise_xor_expr = 51, RULE_bitwise_and_expr = 52, RULE_equality_expr = 53, 
		RULE_relational_expr = 54, RULE_additive_expr = 55, RULE_multiplicative_expr = 56, 
		RULE_unary_expr = 57, RULE_power_expr = 58, RULE_accessor_expr = 59, RULE_primary = 60, 
		RULE_callable_expr = 61, RULE_placeholder = 62, RULE_literal = 63, RULE_nil_literal = 64, 
		RULE_boolean_literal = 65, RULE_list_literal = 66, RULE_map_literal = 67, 
		RULE_expression_list_opt = 68, RULE_expression_list = 69, RULE_map_entry_list_opt = 70, 
		RULE_map_entry_list = 71, RULE_map_entry = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "file_header", "library_script", "command_script", "library_block", 
			"command_block", "command_statement_list", "command_body_line", "command_statement", 
			"on_error_only_stmt", "simple_command_statement", "procedure_definition", 
			"signature_part", "needs_clause", "optional_clause", "returns_clause", 
			"param_list", "metadata_block", "non_empty_statement_list", "statement_list", 
			"body_line", "statement", "simple_statement", "block_statement", "on_stmt", 
			"error_handler", "event_handler", "clearEventStmt", "lvalue", "lvalue_list", 
			"set_statement", "call_statement", "return_statement", "emit_statement", 
			"whisper_stmt", "must_statement", "fail_statement", "clearErrorStmt", 
			"ask_stmt", "promptuser_stmt", "break_statement", "continue_statement", 
			"if_statement", "while_statement", "for_each_statement", "qualified_identifier", 
			"call_target", "expression", "logical_or_expr", "logical_and_expr", "bitwise_or_expr", 
			"bitwise_xor_expr", "bitwise_and_expr", "equality_expr", "relational_expr", 
			"additive_expr", "multiplicative_expr", "unary_expr", "power_expr", "accessor_expr", 
			"primary", "callable_expr", "placeholder", "literal", "nil_literal", 
			"boolean_literal", "list_literal", "map_literal", "expression_list_opt", 
			"expression_list", "map_entry_list_opt", "map_entry_list", "map_entry"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'acos'", "'and'", "'as'", "'asin'", "'ask'", "'atan'", "'break'", 
			"'call'", "'clear'", "'clear_error'", "'command'", "'continue'", "'cos'", 
			"'do'", "'each'", "'else'", "'emit'", "'endcommand'", "'endfor'", "'endfunc'", 
			"'endif'", "'endon'", "'endwhile'", "'error'", "'eval'", "'event'", "'fail'", 
			"'false'", "'for'", "'func'", "'fuzzy'", "'if'", "'in'", "'into'", "'last'", 
			"'len'", "'ln'", "'log'", "'means'", "'must'", "'mustbe'", "'named'", 
			"'needs'", "'nil'", "'no'", "'not'", "'on'", "'optional'", "'or'", "'promptuser'", 
			"'return'", "'returns'", "'set'", "'sin'", "'some'", "'tan'", "'timedate'", 
			"'tool'", "'true'", "'typeof'", "'while'", "'whisper'", "'with'", "'@'", 
			null, null, null, null, null, null, null, "'='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'**'", "'&'", "'|'", "'^'", "'~'", "'('", "')'", "','", 
			"'['", "']'", "'{'", "'}'", "':'", "'.'", "'{{'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_ESCAPE_GLOBAL", "KW_ACOS", "KW_AND", "KW_AS", "KW_ASIN", 
			"KW_ASK", "KW_ATAN", "KW_BREAK", "KW_CALL", "KW_CLEAR", "KW_CLEAR_ERROR", 
			"KW_COMMAND", "KW_CONTINUE", "KW_COS", "KW_DO", "KW_EACH", "KW_ELSE", 
			"KW_EMIT", "KW_ENDCOMMAND", "KW_ENDFOR", "KW_ENDFUNC", "KW_ENDIF", "KW_ENDON", 
			"KW_ENDWHILE", "KW_ERROR", "KW_EVAL", "KW_EVENT", "KW_FAIL", "KW_FALSE", 
			"KW_FOR", "KW_FUNC", "KW_FUZZY", "KW_IF", "KW_IN", "KW_INTO", "KW_LAST", 
			"KW_LEN", "KW_LN", "KW_LOG", "KW_MEANS", "KW_MUST", "KW_MUSTBE", "KW_NAMED", 
			"KW_NEEDS", "KW_NIL", "KW_NO", "KW_NOT", "KW_ON", "KW_OPTIONAL", "KW_OR", 
			"KW_PROMPTUSER", "KW_RETURN", "KW_RETURNS", "KW_SET", "KW_SIN", "KW_SOME", 
			"KW_TAN", "KW_TIMEDATE", "KW_TOOL", "KW_TRUE", "KW_TYPEOF", "KW_WHILE", 
			"KW_WHISPER", "KW_WITH", "AT", "STRING_LIT", "TRIPLE_BACKTICK_STRING", 
			"TRIPLE_SQ_STRING", "DOUBLE_BRACKET_STRING", "METADATA_LINE", "NUMBER_LIT", 
			"IDENTIFIER", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
			"STAR_STAR", "AMPERSAND", "PIPE", "CARET", "TILDE", "LPAREN", "RPAREN", 
			"COMMA", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COLON", "DOT", "PLACEHOLDER_START", 
			"EQ", "NEQ", "GT", "LT", "GTE", "LTE", "LINE_COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NeuroScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NeuroScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public File_headerContext file_header() {
			return getRuleContext(File_headerContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NeuroScriptParser.EOF, 0); }
		public Library_scriptContext library_script() {
			return getRuleContext(Library_scriptContext.class,0);
		}
		public Command_scriptContext command_script() {
			return getRuleContext(Command_scriptContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			file_header();
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_FUNC:
			case KW_ON:
				{
				setState(147);
				library_script();
				}
				break;
			case KW_COMMAND:
				{
				setState(148);
				command_script();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			setState(151);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_headerContext extends ParserRuleContext {
		public List<TerminalNode> METADATA_LINE() { return getTokens(NeuroScriptParser.METADATA_LINE); }
		public TerminalNode METADATA_LINE(int i) {
			return getToken(NeuroScriptParser.METADATA_LINE, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(NeuroScriptParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(NeuroScriptParser.NEWLINE, i);
		}
		public File_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_header; }
	}

	public final File_headerContext file_header() throws RecognitionException {
		File_headerContext _localctx = new File_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==METADATA_LINE || _la==NEWLINE) {
				{
				{
				setState(153);
				_la = _input.LA(1);
				if ( !(_la==METADATA_LINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Library_scriptContext extends ParserRuleContext {
		public List<Library_blockContext> library_block() {
			return getRuleContexts(Library_blockContext.class);
		}
		public Library_blockContext library_block(int i) {
			return getRuleContext(Library_blockContext.class,i);
		}
		public Library_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_library_script; }
	}

	public final Library_scriptContext library_script() throws RecognitionException {
		Library_scriptContext _localctx = new Library_scriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_library_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(159);
				library_block();
				}
				}
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_FUNC || _la==KW_ON );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Command_scriptContext extends ParserRuleContext {
		public List<Command_blockContext> command_block() {
			return getRuleContexts(Command_blockContext.class);
		}
		public Command_blockContext command_block(int i) {
			return getRuleContext(Command_blockContext.class,i);
		}
		public Command_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_script; }
	}

	public final Command_scriptContext command_script() throws RecognitionException {
		Command_scriptContext _localctx = new Command_scriptContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_command_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				command_block();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_COMMAND );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Library_blockContext extends ParserRuleContext {
		public Procedure_definitionContext procedure_definition() {
			return getRuleContext(Procedure_definitionContext.class,0);
		}
		public TerminalNode KW_ON() { return getToken(NeuroScriptParser.KW_ON, 0); }
		public Event_handlerContext event_handler() {
			return getRuleContext(Event_handlerContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(NeuroScriptParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(NeuroScriptParser.NEWLINE, i);
		}
		public Library_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_library_block; }
	}

	public final Library_blockContext library_block() throws RecognitionException {
		Library_blockContext _localctx = new Library_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_library_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_FUNC:
				{
				setState(169);
				procedure_definition();
				}
				break;
			case KW_ON:
				{
				setState(170);
				match(KW_ON);
				setState(171);
				event_handler();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(174);
				match(NEWLINE);
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Command_blockContext extends ParserRuleContext {
		public TerminalNode KW_COMMAND() { return getToken(NeuroScriptParser.KW_COMMAND, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(NeuroScriptParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(NeuroScriptParser.NEWLINE, i);
		}
		public Metadata_blockContext metadata_block() {
			return getRuleContext(Metadata_blockContext.class,0);
		}
		public Command_statement_listContext command_statement_list() {
			return getRuleContext(Command_statement_listContext.class,0);
		}
		public TerminalNode KW_ENDCOMMAND() { return getToken(NeuroScriptParser.KW_ENDCOMMAND, 0); }
		public Command_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_block; }
	}

	public final Command_blockContext command_block() throws RecognitionException {
		Command_blockContext _localctx = new Command_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_command_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(KW_COMMAND);
			setState(181);
			match(NEWLINE);
			setState(182);
			metadata_block();
			setState(183);
			command_statement_list();
			setState(184);
			match(KW_ENDCOMMAND);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(185);
				match(NEWLINE);
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Command_statement_listContext extends ParserRuleContext {
		public Command_statementContext command_statement() {
			return getRuleContext(Command_statementContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(NeuroScriptParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(NeuroScriptParser.NEWLINE, i);
		}
		public List<Command_body_lineContext> command_body_line() {
			return getRuleContexts(Command_body_lineContext.class);
		}
		public Command_body_lineContext command_body_line(int i) {
			return getRuleContext(Command_body_lineContext.class,i);
		}
		public Command_statement_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_statement_list; }
	}
